--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -1,62 +1,38 @@
-# Ошибки
-E.SCE=Невозможно связаться с сервером. Попробуйте повторить позже
+# \u041E\u0448\u0438\u0431\u043A\u0438
+E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u0432\u044F\u0437\u0430\u0442\u044C\u0441\u044F \u0441 \u0441\u0435\u0440\u0432\u0435\u0440\u043E\u043C. \u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u044C \u043F\u043E\u0437\u0436\u0435
 
-#значения для топбара
+#\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0442\u043E\u043F\u0431\u0430\u0440\u0430
 
-tb.menu.login=Вход на сайт
-tb.menu.help=Помощь
+tb.menu.login=\u043A \u043C\u043E\u0438\u043C \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430\u043C
 
-tb.menu.welcome=Меню
-tb.menu.channels=Передачи
-tb.menu.channels.detail=Выбирайте каналы для просмотра
-tb.menu.settings=Настройки
-tb.menu.settings.detail=Измените сайт под себя
-tb.menu.studio=Студия
-tb.menu.studio.detail=Запишите новый выпуск своего канала
-tb.menu.account=Аккаунт
-tb.menu.account.detail=Полный доступ к вашей личности
+tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
+tb.menu.search=\u043F\u043E\u0438\u0441\u043A \u043F\u043E \u043A\u0430\u0442\u0430\u043B\u043E\u0433\u0443
 
-tb.menu.account.welcome.prefix=Благодарим за внимание,
-tb.menu.account.login=Вход
+tb.menu.welcome=\u0441\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u043E \u0434\u043B\u044F
+tb.menu.welcome.gamer.aka=\u043E\u043D \u0436\u0435
+tb.menu.welcome.gamer.aka.none=\u043D\u0435 \u0438\u0433\u0440\u043E\u043A
 
-authProvider.title.yandex=Яндекс
+
+authProvider.title.yandex=\u042F\u043D\u0434\u0435\u043A\u0441
 authProvider.title.twitter=Twitter
 authProvider.title.google=Google
 authProvider.title.facebook=Facebook
-authProvider.disclaimer=Зачем помнить сотни паролей? Используйте для входа свой аккаунт из социальной сети:
+authProvider.disclaimer=\u0417\u0430\u0447\u0435\u043C \u043F\u043E\u043C\u043D\u0438\u0442\u044C \u0441\u043E\u0442\u043D\u0438 \u043F\u0430\u0440\u043E\u043B\u0435\u0439? \u0418\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435 \u0434\u043B\u044F \u0432\u0445\u043E\u0434\u0430 \u0441\u0432\u043E\u0439 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 \u0438\u0437 \u0441\u043E\u0446\u0438\u0430\u043B\u044C\u043D\u043E\u0439 \u0441\u0435\u0442\u0438:
 
 
 ### STUDIO
-roleMarks.DIRECTOR=режиссер
-
-studio.create.link=создать канал
-studio.navigator.builder=Конструктор
-studio.navigator.card= Визитка
-studio.navigator.staff=Персонал
-studio.navigator.goair=Выйти в эфир
-
 
 ### ACCOUNT
-account.navigator.navigator=Навигатор
-account.navigator.card=Ваша визитка
-account.navigator.socials=Социалки
+account.navigator.navigator=\u041D\u0430\u0432\u0438\u0433\u0430\u0442\u043E\u0440
+account.navigator.card=\u0412\u0430\u0448\u0430 \u0432\u0438\u0437\u0438\u0442\u043A\u0430
+account.navigator.socials=\u0421\u043E\u0446\u0438\u0430\u043B\u043A\u0438
 
-### НЕИЗВЕСТНОЕ
+### \u041D\u0415\u0418\u0417\u0412\u0415\u0421\u0422\u041D\u041E\u0415
 
-html.account.air.create.suggestion=Знаете больше чем они?
-html.account.air.create.proceed=откройте канал
-html.account.air.create.off=скрыть это предложение и не показывать больше
-html.account.air.create.explain=узнайте о возможностях
-
-
-channelBuilder.navigator.to=⇽ к конструктору
-channelBuilder.navigator.toBillings=⇽ к списку
-
-
-authProvider.loginWith.google=Вход через Google
-authProvider.loginWith.yandex=Вход через Yandex
-authProvider.loginWith.twitter=Вход через Twitter
-authProvider.loginWith.facebook=Вход через Facebook
+authProvider.loginWith.google=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Google
+authProvider.loginWith.yandex=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Yandex
+authProvider.loginWith.twitter=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Twitter
+authProvider.loginWith.facebook=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Facebook
 authProvider.connectedWith.google=Google
 authProvider.connectedWith.yandex=Yandex
 authProvider.connectedWith.twitter=Twitter
@@ -66,76 +42,4 @@ authProvider.connectWith.yandex=Yandex
 authProvider.connectWith.twitter=Twitter
 authProvider.connectWith.facebook=Facebook
 
-LoginDialog.oauth.title=Мы не хотим хранить ваши пароли, поэтому используйте свой доверенный аккаунт
-
-PersonalForm.failed=Не сохранилось. Исправьте ошибки и попробуйте ещё раз
-PersonalForm.done=Настройки сохранены успешно!
-PersonalForm.submit=Сохранить изменения
-PersonalForm.displayName.label=Имя
-PersonalForm.displayName.traits=
-PersonalForm.primaryEmail.label=Основная почта
-PersonalForm.primaryEmail.traits=(будет использовать в первую очередь)
-message.PersonalForm.displayName.empty=Напишите свое имя
-message.PersonalForm.displayName.tooLong=Очень длинное имя. Ограничьтесь {0} символами.
-message.PersonalForm.primaryEmail.empty=Укажите адрес электронной почты, без него никак
-message.PersonalForm.primaryEmail.tooLong=Очень длинный адрес почты. Есть другой, покороче?
-
-ChannelDetailsEditForm.title.label=Название
-ChannelDetailsEditForm.title.traits=(опишите двумя словами)
-ChannelDetailsEditForm.detail.label=Краткое описание
-ChannelDetailsEditForm.detail.traits=(буквально две-три строки)
-ChannelDetailsEditForm.contactEmail.label=Адрес электронной почты
-ChannelDetailsEditForm.contactEmail.traits=(нужен для аватара и оповещений)
-ChannelDetailsEditForm.submit=Сохранить
-ChannelDetailsEditForm.submitting=Сохраняю настройки ...
-ChannelDetailsEditForm.failed=Не сохранилось. Исправьте ошибки и попробуйте ещё раз
-ChannelDetailsEditForm.done=Настройки сохранены успешно!
-message.ChannelDetailsEditForm.title.empty=Придумайте каналу название
-message.ChannelDetailsEditForm.title.tooLong=Название слишком длинное (можно {0}  букв максимум)
-message.ChannelDetailsEditForm.detail.empty=Придумайте каналу описание
-message.ChannelDetailsEditForm.detail.tooLong=Описание слишком длинное (можно {0}  букв максимум)
-message.ChannelDetailsEditForm.contactEmail.empty=Контактная почта крайне нужна. Для жалоб и предложений.
-message.ChannelDetailsEditForm.contactEmail.tooLong=Адрес почты очень длинный. Используйте другой, покороче.
-
-ChannelBillingEditForm.paymentClass.label=Тип оплаты
-ChannelBillingEditForm.paymentClass.traits=
-ChannelBillingEditForm.paymentClass.TICKET=Одноразовый билет
-ChannelBillingEditForm.paymentClass.SUBSCRIPTION=Абонемент
-ChannelBillingEditForm.hidden.label=Скрыть этот вариант от клиентов
-ChannelBillingEditForm.hidden.traits=
-ChannelBillingEditForm.amount.label=Стоимость
-ChannelBillingEditForm.amount.traits=(в русских рублях)
-ChannelBillingEditForm.subscriptionLength.label=Длительность абонемента
-ChannelBillingEditForm.subscriptionLength.traits=
-ChannelBillingEditForm.subscription.DAY=дней
-ChannelBillingEditForm.subscription.MONTH=месяцев
-ChannelBillingEditForm.subscription.WEEK=недель
-ChannelBillingEditForm.submit.CREATE=создать
-ChannelBillingEditForm.submit.EDIT=сохранить
-ChannelBillingEditForm.done=Успешно сохранилось!
-ChannelBillingEditForm.failed=Не сохранилось! Исправьте ошибки и попробуйте ещё раз
-message.ChannelBillingEditForm.amount.empty=Цену нужно указать
-message.ChannelBillingEditForm.amount.typeMismatch=Цена - это число рублей, копейки не нужно писать
-message.ChannelBillingEditForm.amount.shouldGreater=Очень мало. Минимум, что можно указать - это {0}
-message.ChannelBillingEditForm.amount.shouldLess=Очень много. Максимум, что можно указать - это {0}
-message.ChannelBillingEditForm.subscriptionLength.typeMismatch=Введите здесь количество периодов (дней, недель или месяцев)
-
-ChannelBillingPage.list.header=Тип оплаты
-ChannelBillingPage.list.length=Период
-ChannelBillingPage.list.amount=Стоимость
-ChannelBillingPage.list.state=
-ChannelBillingPage.list.action.edit=изменить
-ChannelBillingPage.list.state.off=Выключено
-ChannelBillingPage.list.state.on=Включено
-
-channels.navigator.ChannelsWork=Работа
-channels.navigator.ChannelsLine=Лента
-channels.navigator.PersonalData=Визитка
-channels.navigator.SocialConnections=Мои связи
-channels.navigator.Logout=Выйти из аккаунта
-channels.navigator.CatalogList=Категории
-channels.navigator.CatalogSearch=Поиск
-
-ChannelPage.tab.card.label=Визитка
-ChannelPage.tab.card.tooltip=Краткая информация, контакты etc
-ChannelPage.tab.constructor.label=Конструктор
+LoginDialog.oauth.title=\u041C\u044B \u043D\u0435 \u0445\u043E\u0442\u0438\u043C \u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0432\u0430\u0448\u0438 \u043F\u0430\u0440\u043E\u043B\u0438, \u043F\u043E\u044D\u0442\u043E\u043C\u0443 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435 \u0441\u0432\u043E\u0439 \u0434\u043E\u0432\u0435\u0440\u0435\u043D\u043D\u044B\u0439 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
