--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -8,10 +8,11 @@ tb.menu.login=\u043A \u043C\u043E\u0438\u043C \u0441\u0442\u0440\u0430\u043D\u04
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 tb.menu.search=\u043F\u043E\u0438\u0441\u043A \u043F\u043E \u043A\u0430\u0442\u0430\u043B\u043E\u0433\u0443
 
-tb.menu.welcome=\u0441\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u043E \u0434\u043B\u044F
-tb.menu.welcome.gamer.aka=\u043E\u043D \u0436\u0435
-tb.menu.welcome.gamer.aka.none=\u043D\u0435 \u0438\u0433\u0440\u043E\u043A
-
+tb.menu.welcome.anonymous.name=(\u0431\u0435\u0437\u044B\u043C\u044F\u043D\u043D\u044B\u0439 \u0433\u0435\u0440\u043E\u0439)
+tb.menu.welcome.goto=
+tb.menu.welcome.goto.players=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
+tb.menu.welcome.goto.maps=\u041A\u0430\u0440\u0442\u044B
+tb.menu.welcome.goto.logout=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
 
 authProvider.title.yandex=\u042F\u043D\u0434\u0435\u043A\u0441
 authProvider.title.twitter=Twitter
