--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -2,9 +2,7 @@
 E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u0432\u044F\u0437\u0430\u0442\u044C\u0441\u044F \u0441 \u0441\u0435\u0440\u0432\u0435\u0440\u043E\u043C. \u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u044C \u043F\u043E\u0437\u0436\u0435
 
 #\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0442\u043E\u043F\u0431\u0430\u0440\u0430
-
 tb.menu.login=\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
-
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 tb.menu.search=\u043F\u043E\u0438\u0441\u043A \u043F\u043E \u043A\u0430\u0442\u0430\u043B\u043E\u0433\u0443
 
@@ -14,49 +12,33 @@ tb.menu.welcome.goto.players=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
 tb.menu.welcome.goto.maps=\u041A\u0430\u0440\u0442\u044B
 tb.menu.welcome.goto.logout=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
 
-authProvider.title.yandex=\u042F\u043D\u0434\u0435\u043A\u0441
-authProvider.title.twitter=Twitter
-authProvider.title.google=Google
-authProvider.title.facebook=Facebook
-authProvider.disclaimer=\u0417\u0430\u0447\u0435\u043C \u043F\u043E\u043C\u043D\u0438\u0442\u044C \u0441\u043E\u0442\u043D\u0438 \u043F\u0430\u0440\u043E\u043B\u0435\u0439? \u0418\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435 \u0434\u043B\u044F \u0432\u0445\u043E\u0434\u0430 \u0441\u0432\u043E\u0439 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 \u0438\u0437 \u0441\u043E\u0446\u0438\u0430\u043B\u044C\u043D\u043E\u0439 \u0441\u0435\u0442\u0438:
+### Access / Login
+Login.pageTitle=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 GAMZA
+Login.auth.title=\u0412\u0445\u043E\u0434 \u043D\u0430 \u043B\u044E\u0431\u043E\u0439 \u0432\u043A\u0443\u0441!
+Login.auth.selection.form=\u0414\u043B\u044F \u043B\u044E\u0431\u0438\u0442\u0435\u043B\u0435\u0439 \u043F\u0430\u0440\u043E\u043B\u0435\u0439
+Login.auth.selection.3rd=\u0414\u043B\u044F \u043B\u044E\u0431\u0438\u0442\u0435\u043B\u0435\u0439 \u0441\u0435\u0440\u0432\u0438\u0441\u043E\u0432
+Login.auth.selection.other=\u0414\u043B\u044F \u043F\u0440\u043E\u0447\u0435\u0433\u043E
+
+Login.auth.3rd.yandex=\u042F\u043D\u0434\u0435\u043A\u0441
+Login.auth.3rd.google=Google
+Login.auth.3rd.facebook=Facebook
+Login.auth.3rd.twitter=Twitter
+
+Login.auth.other.register=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
+Login.auth.other.restore=\u041D\u0430\u043F\u043E\u043C\u043D\u0438\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
+
+Login.auth.form.username.placeholder=\u0410\u0434\u0440\u0435\u0441 \u043F\u043E\u0447\u0442\u044B
+Login.auth.form.password.placeholder=\u041F\u0430\u0440\u043E\u043B\u044C
+Login.auth.form.submit=\u0412\u043E\u0439\u0442\u0438 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442!
+
+### Access / Register
+Register.pageTitle=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430 GAMZA
 
 
-### STUDIO
+### Access / Restore
+Restore.pageTitle=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F \u043F\u0430\u0440\u043E\u043B\u044F \u0432 GAMZA
 
-### ACCOUNT
-account.navigator.navigator=\u041D\u0430\u0432\u0438\u0433\u0430\u0442\u043E\u0440
-account.navigator.card=\u0412\u0430\u0448\u0430 \u0432\u0438\u0437\u0438\u0442\u043A\u0430
-account.navigator.socials=\u0421\u043E\u0446\u0438\u0430\u043B\u043A\u0438
-
-### \u041D\u0415\u0418\u0417\u0412\u0415\u0421\u0422\u041D\u041E\u0415
-
-authProvider.loginWith.google=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Google
-authProvider.loginWith.yandex=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Yandex
-authProvider.loginWith.twitter=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Twitter
-authProvider.loginWith.facebook=\u0412\u0445\u043E\u0434 \u0447\u0435\u0440\u0435\u0437 Facebook
-authProvider.connectedWith.google=Google
-authProvider.connectedWith.yandex=Yandex
-authProvider.connectedWith.twitter=Twitter
-authProvider.connectedWith.facebook=Facebook
-authProvider.connectWith.google=Google
-authProvider.connectWith.yandex=Yandex
-authProvider.connectWith.twitter=Twitter
-authProvider.connectWith.facebook=Facebook
-
-LoginDialog.auth.title=\u0412\u0445\u043E\u0434 \u043D\u0430 \u043B\u044E\u0431\u043E\u0439 \u0432\u043A\u0443\u0441!
-LoginDialog.auth.selection.form=\u0414\u043B\u044F \u043B\u044E\u0431\u0438\u0442\u0435\u043B\u0435\u0439 \u043F\u0430\u0440\u043E\u043B\u0435\u0439
-LoginDialog.auth.selection.3rd=\u0414\u043B\u044F \u043B\u044E\u0431\u0438\u0442\u0435\u043B\u0435\u0439 \u0441\u0435\u0440\u0432\u0438\u0441\u043E\u0432
-LoginDialog.auth.selection.other=\u0414\u043B\u044F \u043F\u0440\u043E\u0447\u0435\u0433\u043E
-
-LoginDialog.auth.3rd.yandex=\u042F\u043D\u0434\u0435\u043A\u0441
-LoginDialog.auth.3rd.google=Google
-LoginDialog.auth.3rd.facebook=Facebook
-LoginDialog.auth.3rd.twitter=Twitter
-
-LoginDialog.auth.other.register=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
-LoginDialog.auth.other.restore=\u041D\u0430\u043F\u043E\u043C\u043D\u0438\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
-
-# errors page
+### Errors
 http.404.pageTitle=\u0421\u0435\u0440\u0432\u0435\u0440 \u0433\u043E\u0432\u043E\u0440\u0438\u0442 404
 http.404=#404
 http.404.h=\u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A - \u044D\u0442\u0430 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
