--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -2,7 +2,9 @@
 E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u0432\u044F\u0437\u0430\u0442\u044C\u0441\u044F \u0441 \u0441\u0435\u0440\u0432\u0435\u0440\u043E\u043C. \u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u044C \u043F\u043E\u0437\u0436\u0435
 
 #\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0442\u043E\u043F\u0431\u0430\u0440\u0430
-tb.menu.login=\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
+accountBar.anonymous.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C, \u0434\u0440\u0443\u0436\u0438\u0449\u0435!
+accountBar.anonymous.welcome.p=\u041A \u0432\u0430\u0448\u0438\u043C \u0443\u0441\u043B\u0443\u0433\u0430\u043C<br/><a href="{0}/auth" a-href="{0}/auth.ajax" class="modal-firer">\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442</a> \u0438 <a href="{0}/auth/register" a-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F</a>
+
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 tb.menu.search=\u043F\u043E\u0438\u0441\u043A \u043F\u043E \u043A\u0430\u0442\u0430\u043B\u043E\u0433\u0443
 
@@ -12,13 +14,13 @@ tb.menu.welcome.goto.players=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
 tb.menu.welcome.goto.maps=\u041A\u0430\u0440\u0442\u044B
 tb.menu.welcome.goto.logout=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
 
+
+
 ### Access / Login
 Login.pageTitle=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 GAMZA
-Login.auth.title=\u0412\u0445\u043E\u0434 \u043D\u0430 \u043B\u044E\u0431\u043E\u0439 \u0432\u043A\u0443\u0441!
-Login.auth.selection.form=\u0414\u043B\u044F \u043B\u044E\u0431\u0438\u0442\u0435\u043B\u0435\u0439 \u043F\u0430\u0440\u043E\u043B\u0435\u0439
-Login.auth.selection.3rd=\u0414\u043B\u044F \u043B\u044E\u0431\u0438\u0442\u0435\u043B\u0435\u0439 \u0441\u0435\u0440\u0432\u0438\u0441\u043E\u0432
-Login.auth.selection.other=\u0414\u043B\u044F \u043F\u0440\u043E\u0447\u0435\u0433\u043E
+Login.auth.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 GAMZA
 
+Login.auth.3rd=\u0438\u043B\u0438 \u043C\u043E\u0436\u043D\u043E \u0432\u043E\u0439\u0442\u0438 \u0447\u0435\u0440\u0435\u0437 \u0441\u0435\u0442\u0438:
 Login.auth.3rd.yandex=\u042F\u043D\u0434\u0435\u043A\u0441
 Login.auth.3rd.google=Google
 Login.auth.3rd.facebook=Facebook
@@ -30,6 +32,9 @@ Login.auth.other.restore=\u041D\u0430\u043F\u043E\u043C\u043D\u0438\u0442\u044C 
 Login.auth.form.username.placeholder=\u0410\u0434\u0440\u0435\u0441 \u043F\u043E\u0447\u0442\u044B
 Login.auth.form.password.placeholder=\u041F\u0430\u0440\u043E\u043B\u044C
 Login.auth.form.submit=\u0412\u043E\u0439\u0442\u0438 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442!
+Login.auth.form.forget=\u0437\u0430\u0431\u044B\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C?
+
+Login.auth.registration=\u043E\u0442\u043A\u0440\u044B\u0442\u0430 <a href="{0}/auth/register" a-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F!</a>
 
 ### Access / Register
 Register.pageTitle=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430 GAMZA
