--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -5,7 +5,13 @@ E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u0432\
 accountBar.anonymous.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C, \u0434\u0440\u0443\u0436\u0438\u0449\u0435!
 accountBar.anonymous.welcome.p=\u041A \u0432\u0430\u0448\u0438\u043C \u0443\u0441\u043B\u0443\u0433\u0430\u043C<br/><a href="{0}/auth" data-ax-href="{0}/auth.ajax" class="modal-firer">\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442</a> \u0438 <a href="{0}/auth/register" data-ax-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F</a>
 
+accountBar.opener.expand=\u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043C\u0435\u043D\u044E
+accountBar.opener.collapse=\u0441\u043A\u0440\u044B\u0442\u044C \u043C\u0435\u043D\u044E
 
+accountBar.accountMenu.maps=\u041A\u0430\u0440\u0442\u044B
+accountBar.accountMenu.avatars=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
+accountBar.accountMenu.settings=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
+accountBar.accountMenu.logout=\u0412\u044B\u0445\u043E\u0434
 
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 tb.menu.search=\u043F\u043E\u0438\u0441\u043A \u043F\u043E \u043A\u0430\u0442\u0430\u043B\u043E\u0433\u0443
