--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -10,7 +10,8 @@ accountBar.opener.collapse=\u0441\u043A\u0440\u044B\u0442\u044C \u043C\u0435\u04
 
 accountBar.accountMenu.maps=\u041A\u0430\u0440\u0442\u044B
 accountBar.accountMenu.avatars=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
-accountBar.accountMenu.settings=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
+accountBar.accountMenu.games=\u0418\u0433\u0440\u044B
+accountBar.accountMenu.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
 accountBar.accountMenu.logout=\u0412\u044B\u0445\u043E\u0434
 
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
