--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -12,6 +12,7 @@ accountBar.accountMenu.maps=\u041A\u0430\u0440\u0442\u044B
 accountBar.accountMenu.avatars=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
 accountBar.accountMenu.games=\u0418\u0433\u0440\u044B
 accountBar.accountMenu.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+accountBar.accountMenu.settings=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 accountBar.accountMenu.logout=\u0412\u044B\u0445\u043E\u0434
 
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
@@ -83,3 +84,12 @@ auth.EA001=\u042E\u0437\u0435\u0440 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\
 auth.EA001.h=C\u043A\u043E\u0440\u0435\u0435 \u0432\u0441\u0435\u0433\u043E \u0432\u044B \u043E\u0448\u0438\u0431\u043B\u0438\u0441\u044C \u0441 \u0430\u0434\u0440\u0435\u0441\u043E\u043C \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u0435\u043C
 auth.EA001.p=\u042D\u0442\u043E \u0434\u043E\u0432\u043E\u043B\u044C\u043D\u043E \u0447\u0430\u0441\u0442\u043E \u0441\u043B\u0443\u0447\u0430\u0435\u0442\u0441\u044F, \u043D\u043E \u0440\u0435\u0448\u0435\u043D\u0438\u0435 \u0435\u0441\u0442\u044C:
 auth.EA001.suggestions.repeat=\u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u0432\u0432\u0435\u0441\u0442\u0438 \u043B\u043E\u0433\u0438\u043D \u0438 \u043F\u0430\u0440\u043E\u043B\u044C <a href="{0}/auth">\u0435\u0449\u0451 \u0440\u0430\u0437</a>
+
+### UserProfilePage
+UserProfilePage.user.noName=(\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u0443\u043A\u0430\u0437\u0430\u043B \u0441\u0432\u043E\u0435 \u0438\u043C\u044F)
+UserProfilePage.accountGames.h=\u0418\u0433\u0440\u044B
+UserProfilePage.accountGames.empty=\u044E\u0437\u0435\u0440 \u043D\u0435 \u0438\u043C\u0435\u0435\u0442 \u043E\u0442\u043D\u043E\u0448\u0435\u043D\u0438\u044F \u043A \u0438\u0433\u0440\u0430\u043C
+UserProfilePage.accountMaps.h=\u041A\u0430\u0440\u0442\u044B
+UserProfilePage.accountMaps.empty=\u043A\u0430\u0440\u0442\u044B \u043E\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u044E\u0442
+UserProfilePage.accountAvatars.h=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
+UserProfilePage.accountAvatars.empty=\u0438\u0433\u0440\u043E\u043A\u0438 \u043D\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B
