--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -96,7 +96,7 @@ UserProfilePage.accountAvatars.empty=\u0438\u0433\u0440\u043E\u043A\u0438 \u043D
 
 
 ### game/create.ajax
-ModalGameCreate.form.name.placeholder=\u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u0438\u0433\u0440\u044B
+ModalGameCreate.form.title.placeholder=\u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u0438\u0433\u0440\u044B
 ModalGameCreate.form.submit=\u0441\u043E\u0437\u0434\u0430\u0442\u044C
 ModalGameCreate.form.submitting=\u0441\u043E\u0437\u0434\u0430\u044E \u0438\u0433\u0440\u0443...
 ModalGameCreate.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
