--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -1,6 +1,10 @@
 # \u041E\u0448\u0438\u0431\u043A\u0438
 E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u0432\u044F\u0437\u0430\u0442\u044C\u0441\u044F \u0441 \u0441\u0435\u0440\u0432\u0435\u0440\u043E\u043C. \u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u044C \u043F\u043E\u0437\u0436\u0435
 
+### Enums
+UserGameRoles.ADMINISTRATOR=\u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+UserGameRoles.ADMINISTRATOR.flag=\u0410
+
 #\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0442\u043E\u043F\u0431\u0430\u0440\u0430
 accountBar.anonymous.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C, \u0434\u0440\u0443\u0436\u0438\u0449\u0435!
 accountBar.anonymous.welcome.p=\u041A \u0432\u0430\u0448\u0438\u043C \u0443\u0441\u043B\u0443\u0433\u0430\u043C<br/><a href="{0}/auth" data-ax-href="{0}/auth.ajax" class="modal-firer">\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442</a> \u0438 <a href="{0}/auth/register" data-ax-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F</a>
@@ -94,9 +98,10 @@ UserProfilePage.accountMaps.empty=\u043A\u0430\u0440\u0442\u044B \u043E\u0442\u0
 UserProfilePage.accountAvatars.h=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
 UserProfilePage.accountAvatars.empty=\u0438\u0433\u0440\u043E\u043A\u0438 \u043D\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B
 
-
 ### game/create.ajax
+ModalGameCreate.title=\u041D\u043E\u0432\u0430\u044F \u0438\u0433\u0440\u0430!
 ModalGameCreate.form.title.placeholder=\u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u0438\u0433\u0440\u044B
 ModalGameCreate.form.submit=\u0441\u043E\u0437\u0434\u0430\u0442\u044C
 ModalGameCreate.form.submitting=\u0441\u043E\u0437\u0434\u0430\u044E \u0438\u0433\u0440\u0443...
 ModalGameCreate.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
+
