--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -105,3 +105,17 @@ ModalGameCreate.form.submit=\u0441\u043E\u0437\u0434\u0430\u0442\u044C
 ModalGameCreate.form.submitting=\u0441\u043E\u0437\u0434\u0430\u044E \u0438\u0433\u0440\u0443...
 ModalGameCreate.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
 
+### map/create.ajax
+MapCreatePage.h=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0434\u0435\u0442\u0430\u043B\u0438 \u043D\u043E\u0432\u043E\u0439 \u043A\u0430\u0440\u0442\u044B
+
+MapCreateForm.title.label=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+MapCreateForm.title.placeholder=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043A\u0430\u0440\u0442\u044B (\u0447\u0435\u043B\u043E\u0432\u0435\u0447\u0435\u0441\u043A\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435)
+MapCreateForm.alias.label=\u0410\u043B\u0438\u0430\u0441
+MapCreateForm.alias.placeholder=\u041A\u043E\u0434\u043E\u0432\u043E\u0435 \u0438\u043C\u044F \u0434\u043B\u044F \u043A\u0430\u0440\u0442\u044B (\u043D\u0435\u043E\u0431\u044F\u0437\u0430\u0442\u0435\u043B\u044C\u043D\u043E)
+MapCreateForm.geometryClass.label=\u0413\u0435\u043E\u043C\u0435\u0442\u0440\u0438\u044F
+MapCreateForm.geometryClass.plain.label=\u041F\u043B\u043E\u0441\u043A\u043E\u0441\u0442\u044C
+MapCreateForm.geometryClass.geoid.label=\u0413\u0435\u043E\u0438\u0434
+
+MapCreateForm.submit=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043A\u0430\u0440\u0442\u0443
+MapCreateForm.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
+MapCreateForm.submitting=\u0441\u043E\u0437\u0434\u0430\u044E \u043A\u0430\u0440\u0442\u0443...
