--- a/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/gazap-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -2,8 +2,8 @@
 E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0432\u044B\u043F\u043E\u043B\u043D\u0438\u0442\u044C \u043A\u043E\u043C\u0430\u043D\u0434\u0443. \u041A\u0440\u0438\u0442\u0438\u0447\u0435\u0441\u043A\u0430\u044F \u043E\u0448\u0438\u0431\u043A\u0430 \u043D\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0435.
 
 ### Enums
-UserGameRoles.ADMINISTRATOR=\u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
-UserGameRoles.ADMINISTRATOR.flag=\u0410
+UserWorldRoles.ADMINISTRATOR=\u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+UserWorldRoles.ADMINISTRATOR.flag=\u0410
 
 #\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0442\u043E\u043F\u0431\u0430\u0440\u0430
 accountBar.anonymous.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C, \u0434\u0440\u0443\u0436\u0438\u0449\u0435!
@@ -12,9 +12,6 @@ accountBar.anonymous.welcome.p=\u041A \u0432\u0430\u0448\u0438\u043C \u0443\u044
 accountBar.opener.expand=\u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043C\u0435\u043D\u044E
 accountBar.opener.collapse=\u0441\u043A\u0440\u044B\u0442\u044C \u043C\u0435\u043D\u044E
 
-accountBar.accountMenu.maps=\u041A\u0430\u0440\u0442\u044B
-accountBar.accountMenu.avatars=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
-accountBar.accountMenu.games=\u0418\u0433\u0440\u044B
 accountBar.accountMenu.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
 accountBar.accountMenu.settings=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 accountBar.accountMenu.logout=\u0412\u044B\u0445\u043E\u0434
@@ -91,19 +88,19 @@ auth.EA001.suggestions.repeat=\u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u
 
 ### UserProfilePage
 UserProfilePage.user.noName=(\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u0443\u043A\u0430\u0437\u0430\u043B \u0441\u0432\u043E\u0435 \u0438\u043C\u044F)
-UserProfilePage.accountGames.h=\u0418\u0433\u0440\u044B
-UserProfilePage.accountGames.empty=\u044E\u0437\u0435\u0440 \u043D\u0435 \u0438\u043C\u0435\u0435\u0442 \u043E\u0442\u043D\u043E\u0448\u0435\u043D\u0438\u044F \u043A \u0438\u0433\u0440\u0430\u043C
+UserProfilePage.accountWorlds.h=\u041C\u0438\u0440\u044B
+UserProfilePage.accountWorlds.empty=\u0423\u0447\u0430\u0441\u0442\u0432\u0443\u0439\u0442\u0435 \u0432 \u0436\u0438\u0437\u043D\u0438 \u0434\u0440\u0443\u0433\u0438\u0445 \u043C\u0438\u0440\u043E\u0432 \u0438\u043B\u0438 \u0441\u043E\u0437\u0434\u0430\u0439\u0442\u0435 \u0441\u0432\u043E\u0439
 UserProfilePage.accountMaps.h=\u041A\u0430\u0440\u0442\u044B
-UserProfilePage.accountMaps.empty=\u043A\u0430\u0440\u0442\u044B \u043E\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u044E\u0442
+UserProfilePage.accountMaps.empty=\u0418\u0433\u0440\u043E\u043A \u0438\u043B\u0438 \u0441\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u044C - \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0438\u0441\u044C, \u0438 \u044D\u0442\u043E \u043C\u0435\u0441\u0442\u043E \u043D\u0435 \u0431\u0443\u0434\u0435\u0442 \u0432\u044B\u0433\u043B\u044F\u0434\u0435\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
 UserProfilePage.accountAvatars.h=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
-UserProfilePage.accountAvatars.empty=\u0438\u0433\u0440\u043E\u043A\u0438 \u043D\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B
+UserProfilePage.accountAvatars.empty=\u0418\u0433\u0440\u0430\u0439\u0442\u0435 \u0432 \u0438\u0433\u0440\u044B \u0441 \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u043E\u0439 GAMZA!
 
-### game/create.ajax
-ModalGameCreate.title=\u041D\u043E\u0432\u0430\u044F \u0438\u0433\u0440\u0430!
-ModalGameCreate.form.title.placeholder=\u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u0438\u0433\u0440\u044B
-ModalGameCreate.form.submit=\u0441\u043E\u0437\u0434\u0430\u0442\u044C
-ModalGameCreate.form.submitting=\u0441\u043E\u0437\u0434\u0430\u044E \u0438\u0433\u0440\u0443...
-ModalGameCreate.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
+### world/create.ajax
+ModalWorldCreate.title=\u041D\u043E\u0432\u0430\u044F \u043C\u0438\u0440!
+ModalWorldCreate.form.title.placeholder=\u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u043C\u0438\u0440\u0430
+ModalWorldCreate.form.submit=\u0441\u043E\u0437\u0434\u0430\u0442\u044C
+ModalWorldCreate.form.submitting=\u0441\u043E\u0437\u0434\u0430\u044E \u043C\u0438\u0440...
+ModalWorldCreate.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
 
 ### map/create.ajax
 MapCreatePage.h=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0434\u0435\u0442\u0430\u043B\u0438 \u043D\u043E\u0432\u043E\u0439 \u043A\u0430\u0440\u0442\u044B
