--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -1,14 +1,13 @@
 # \u041E\u0448\u0438\u0431\u043A\u0438
 E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0432\u044B\u043F\u043E\u043B\u043D\u0438\u0442\u044C \u043A\u043E\u043C\u0430\u043D\u0434\u0443. \u041A\u0440\u0438\u0442\u0438\u0447\u0435\u0441\u043A\u0430\u044F \u043E\u0448\u0438\u0431\u043A\u0430 \u043D\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0435.
 
-ViewMeta.pageTitle.default=Gamza
+ViewMeta.pageTitle.default=WayPalm
 
 ### Enums
 UserWorldRoles.ADMINISTRATOR=\u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
 UserWorldRoles.ADMINISTRATOR.flag=\u0410
 
-accountBar.anonymous.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C, \u0434\u0440\u0443\u0436\u0438\u0449\u0435!
-accountBar.anonymous.welcome.p=\u041A \u0432\u0430\u0448\u0438\u043C \u0443\u0441\u043B\u0443\u0433\u0430\u043C<br/><a href="{0}/auth" data-ax-href="{0}/auth.ajax" class="modal-firer">\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442</a> \u0438 <a href="{0}/auth/register" data-ax-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F</a>
+accountBar.anonymous.actions=<a href="{0}/auth" class="modal-firer">\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442</a>
 
 accountBar.opener.expand=\u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043C\u0435\u043D\u044E
 accountBar.opener.collapse=\u0441\u043A\u0440\u044B\u0442\u044C \u043C\u0435\u043D\u044E
@@ -27,8 +26,8 @@ tb.menu.welcome.goto.maps=\u041A\u0430\u0440\u0442\u044B
 tb.menu.welcome.goto.logout=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
 
 ### Access / Login
-Login.pageTitle=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 GAMZA
-Login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 GAMZA
+Login.pageTitle=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 WayPalm
+Login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 WayPalm
 Login.title.registration=\u043E\u0442\u043A\u0440\u044B\u0442\u0430 <a href="{0}/auth/register" data-ax-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F!</a>
 Login.notice.forget=\u0417\u0430\u0431\u044B\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C? \u0415\u0433\u043E \u043C\u043E\u0436\u043D\u043E <a href="{0}/auth/restore" data-ax-href="{0}/auth/restore.ajax" class="submit-option modal-firer">\u043F\u043E\u043C\u0435\u043D\u044F\u0442\u044C</a>
 
@@ -48,7 +47,7 @@ Login.form.submitting=\u043F\u0440\u043E\u0432\u0435\u0440\u044F\u0435\u043C \u0
 Login.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
 
 ### Access / Register
-Register.pageTitle=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430 GAMZA
+Register.pageTitle=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430 WayPalm
 Register.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u0437\u0430 5 \u0441\u0435\u043A\u0443\u043D\u0434!
 Register.title.login=\u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B? \u0434\u043B\u044F \u0432\u0430\u0441 - <a href="{0}/auth" data-ax-href="{0}/auth.ajax" class="modal-firer">\u0434\u0438\u0430\u043B\u043E\u0433 \u0432\u0445\u043E\u0434\u0430</a>
 Register.notice=\u0421\u043E\u0437\u0434\u0430\u0432\u0430\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442, \u0432\u044B \u0441\u043E\u0433\u043B\u0430\u0448\u0430\u0435\u0442\u0435\u0441\u044C \u0441 <a href="{0}/legal/terms" target="_blank">\u0443\u0441\u043B\u043E\u0432\u0438\u044F\u043C\u0438 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u0438\u044F \u0441\u0435\u0440\u0432\u0438\u0441\u043E\u043C</a>
@@ -62,7 +61,7 @@ Register.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
 Register.form.submitting=\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u0443\u0435\u043C \u043D\u043E\u0432\u043E\u0433\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F...
 
 ### Access / Restore
-Restore.pageTitle=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F \u043F\u0430\u0440\u043E\u043B\u044F \u0432 GAMZA
+Restore.pageTitle=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F \u043F\u0430\u0440\u043E\u043B\u044F \u0432 WayPalm
 
 ### Errors
 http.404.pageTitle=\u0421\u0435\u0440\u0432\u0435\u0440 \u0433\u043E\u0432\u043E\u0440\u0438\u0442 404
@@ -92,7 +91,7 @@ UserProfilePage.accountWorlds.empty=\u0423\u0447\u0430\u0441\u0442\u0432\u0443\u
 UserProfilePage.accountMaps.h=\u041A\u0430\u0440\u0442\u044B
 UserProfilePage.accountMaps.empty=\u0418\u0433\u0440\u043E\u043A \u0438\u043B\u0438 \u0441\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u044C - \u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0438\u0441\u044C, \u0438 \u044D\u0442\u043E \u043C\u0435\u0441\u0442\u043E \u043D\u0435 \u0431\u0443\u0434\u0435\u0442 \u0432\u044B\u0433\u043B\u044F\u0434\u0435\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
 UserProfilePage.accountAvatars.h=\u0410\u0432\u0430\u0442\u0430\u0440\u044B
-UserProfilePage.accountAvatars.empty=\u0418\u0433\u0440\u0430\u0439\u0442\u0435 \u0432 \u0438\u0433\u0440\u044B \u0441 \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u043E\u0439 GAMZA!
+UserProfilePage.accountAvatars.empty=\u0418\u0433\u0440\u0430\u0439\u0442\u0435 \u0432 \u0438\u0433\u0440\u044B \u0441 \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u043E\u0439 WayPalm!
 
 ### world/create.ajax
 ModalWorldCreate.title=\u041D\u043E\u0432\u0430\u044F \u043C\u0438\u0440!
