--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -26,8 +26,8 @@ tb.menu.welcome.goto.maps=\u041A\u0430\u0440\u0442\u044B
 tb.menu.welcome.goto.logout=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
 
 ### Access / Login
-Login.pageTitle=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 WayPalm
-Login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442 WayPalm
+Login.pageTitle=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
+Login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 Login.title.registration=\u043E\u0442\u043A\u0440\u044B\u0442\u0430 <a href="{0}/auth/register" data-ax-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F!</a>
 Login.notice.forget=\u0417\u0430\u0431\u044B\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C? \u0415\u0433\u043E \u043C\u043E\u0436\u043D\u043E <a href="{0}/auth/restore" data-ax-href="{0}/auth/restore.ajax" class="submit-option modal-firer">\u043F\u043E\u043C\u0435\u043D\u044F\u0442\u044C</a>
 
@@ -48,9 +48,9 @@ Login.form.cancel=\u043E\u0442\u043C\u0435\u043D\u0430
 
 ### Access / Register
 Register.pageTitle=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430 WayPalm
-Register.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F \u0437\u0430 5 \u0441\u0435\u043A\u0443\u043D\u0434!
-Register.title.login=\u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B? \u0434\u043B\u044F \u0432\u0430\u0441 - <a href="{0}/auth" data-ax-href="{0}/auth.ajax" class="modal-firer">\u0434\u0438\u0430\u043B\u043E\u0433 \u0432\u0445\u043E\u0434\u0430</a>
-Register.notice=\u0421\u043E\u0437\u0434\u0430\u0432\u0430\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442, \u0432\u044B \u0441\u043E\u0433\u043B\u0430\u0448\u0430\u0435\u0442\u0435\u0441\u044C \u0441 <a href="{0}/legal/terms" target="_blank">\u0443\u0441\u043B\u043E\u0432\u0438\u044F\u043C\u0438 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u0438\u044F \u0441\u0435\u0440\u0432\u0438\u0441\u043E\u043C</a>
+Register.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+Register.title.login=\u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B? <a href="{0}/auth" data-ax-href="{0}/auth.ajax" class="modal-firer">\u0432\u0430\u043C \u0441\u044E\u0434\u0430</a>
+Register.notice=\u0421\u043E\u0437\u0434\u0430\u0432\u0430\u044F \u0430\u043A\u043A\u0430\u0443\u043D\u0442, \u0432\u044B \u0441\u043E\u0433\u043B\u0430\u0448\u0430\u0435\u0442\u0435\u0441\u044C<br/> \u0441 <a href="{0}/legal/terms" target="_blank">\u0443\u0441\u043B\u043E\u0432\u0438\u044F\u043C\u0438 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u0438\u044F \u0441\u0435\u0440\u0432\u0438\u0441\u043E\u043C</a>
 Register.waitCaptcha=\u041F\u043E\u0434\u043E\u0436\u0434\u0438\u0442\u0435 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0438 \u043A\u0430\u043F\u0442\u0447\u0438, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430...
 
 Register.form.username.placeholder=\u0410\u0434\u0440\u0435\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B
