--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -28,8 +28,9 @@ tb.menu.welcome.goto.logout=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u
 ### Access / Login
 Login.pageTitle=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 Login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
-Login.title.registration=\u043E\u0442\u043A\u0440\u044B\u0442\u0430 <a href="{0}/auth/register" data-ax-href="{0}/auth/register.ajax" class="modal-firer">\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F!</a>
-Login.notice.forget=\u0417\u0430\u0431\u044B\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C? \u0415\u0433\u043E \u043C\u043E\u0436\u043D\u043E <a href="{0}/auth/restore" data-ax-href="{0}/auth/restore.ajax" class="submit-option modal-firer">\u043F\u043E\u043C\u0435\u043D\u044F\u0442\u044C</a>
+Login.title.notice=\
+    <span class="one-liner"><a href="{0}/auth/restore" class="submit-option modal-firer">\u0432\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C</a> \u043F\u0430\u0440\u043E\u043B\u044C</span>\
+    <span class="one-liner"><a href="{0}/auth/register" class="modal-firer">\u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F</a></span>
 
 Login.auth.3rd=\u0438\u043B\u0438 \u043C\u043E\u0436\u043D\u043E \u0432\u043E\u0439\u0442\u0438 \u0447\u0435\u0440\u0435\u0437 \u0441\u0435\u0442\u0438:
 Login.auth.3rd.yandex=\u042F\u043D\u0434\u0435\u043A\u0441
