--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -1,20 +1,12 @@
 # \u041E\u0448\u0438\u0431\u043A\u0438
-E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0432\u044B\u043F\u043E\u043B\u043D\u0438\u0442\u044C \u043A\u043E\u043C\u0430\u043D\u0434\u0443. \u041A\u0440\u0438\u0442\u0438\u0447\u0435\u0441\u043A\u0430\u044F \u043E\u0448\u0438\u0431\u043A\u0430 \u043D\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0435.
+E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0432\u044B\u043F\u043E\u043B\u043D\u0438\u0442\u044C \u043A\u043E\u043C\u0430\u043D\u0434\u0443 \u0438\u0437-\u0437\u0430 \u043A\u0440\u0438\u0442\u0438\u0447\u0435\u0441\u043A\u043E\u0439 \u043E\u0448\u0438\u0431\u043A\u0438 \u043D\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0435.
 
 ViewMeta.pageTitle.default=WayPalm
 
-### Enums
-UserWorldRoles.ADMINISTRATOR=\u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
-UserWorldRoles.ADMINISTRATOR.flag=\u0410
-
-accountBar.anonymous.actions=<a href="{0}/auth" class="modal-firer">\u0432\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442</a>
-
-accountBar.opener.expand=\u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043C\u0435\u043D\u044E
-accountBar.opener.collapse=\u0441\u043A\u0440\u044B\u0442\u044C \u043C\u0435\u043D\u044E
-
-accountBar.accountMenu.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
-accountBar.accountMenu.settings=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
-accountBar.accountMenu.logout=\u0412\u044B\u0445\u043E\u0434
+Auth.logIn=\u0432\u043E\u0439\u0442\u0438
+Auth.logOut=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
+Auth.form.email.placeholder=e-mail
+Auth.form.password.placeholder=\u043F\u0430\u0440\u043E\u043B\u044C
 
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 tb.menu.search=\u043F\u043E\u0438\u0441\u043A \u043F\u043E \u043A\u0430\u0442\u0430\u043B\u043E\u0433\u0443
