--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -3,10 +3,12 @@ E.SCE=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0432\u044B\
 
 ViewMeta.pageTitle.default=WayPalm
 
-Auth.logIn=\u0432\u043E\u0439\u0442\u0438
-Auth.logOut=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
-Auth.form.email.placeholder=e-mail
-Auth.form.password.placeholder=\u043F\u0430\u0440\u043E\u043B\u044C
+Account.logIn=\u0432\u043E\u0439\u0442\u0438
+Account.logOut=\u0432\u044B\u0439\u0442\u0438 \u0438\u0437 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430
+Account.settings=\u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
+
+LoginForm.email.placeholder=e-mail
+LoginForm.password.placeholder=\u043F\u0430\u0440\u043E\u043B\u044C
 
 tb.menu.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 tb.menu.search=\u043F\u043E\u0438\u0441\u043A \u043F\u043E \u043A\u0430\u0442\u0430\u043B\u043E\u0433\u0443
