--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -126,3 +126,6 @@ message.mapCreateForm.geoidRadiusY.typeMismatch=\u041D\u0443\u0436\u043D\u043E \
 message.mapCreateForm.geoidRadiusY.Min=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043C\u0438\u043D\u0438\u043C\u0443\u043C {1}
 message.mapCreateForm.geometryClass.NotNull=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043F \u043A\u0430\u0440\u0442\u044B
 
+MySettings.tabs.home=\u041F\u0443\u0431\u043B\u0438\u0447\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
+MySettings.tabs.social=\u0421\u043E\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0435 \u0441\u0435\u0442\u0438
+
