--- a/README
+++ b/README
@@ -2,3 +2,6 @@ http://ermark-studio.appspot.com/science/01-contact.html
 
 http://aquatica.protypo.co
 шапка, login/register
+
+and the winner is -
+http://themes.evgenyfireform.com/sniper/demo
