--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -1,5 +1,9 @@
 # \u041E\u0448\u0438\u0431\u043A\u0438
 E.SCE=Impossible to execute command due to critical server failure.
 
+LandingPage.title=Welcome to WayPalm!
 LandingPage.logoBrand.title=navigate to landing page
 LandingPage.readyToBegin=Ready to begin?
+
+commonMenu.worlds=Worlds catalog
+commonMenu.avatars=Avatars
