--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -7,3 +7,11 @@ LandingPage.readyToBegin=Ready to begin?
 
 commonMenu.worlds=Worlds catalog
 commonMenu.avatars=Avatars
+
+LoginForm.login.label=Login
+LoginForm.login.placeholder=that should be some e-mail
+LoginForm.password.label=Password
+LoginForm.password.placeholder=type your password here
+LoginForm.submit=enter
+
+form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
