--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -9,9 +9,9 @@ commonMenu.worlds=Worlds catalog
 commonMenu.avatars=Avatars
 
 LoginForm.login.label=Login
-LoginForm.login.placeholder=that should be some e-mail
+LoginForm.login.placeholder=place for e-mail
 LoginForm.password.label=Password
-LoginForm.password.placeholder=type your password here
-LoginForm.submit=enter
+LoginForm.password.placeholder=place for password
+LoginForm.submit=Enter
 
 form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
