--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -5,6 +5,9 @@ LandingPage.title=Welcome to WayPalm!
 LandingPage.logoBrand.title=navigate to landing page
 LandingPage.readyToBegin=Ready to begin?
 
+brandMenu.menu=menu
+brandMenu.account=account
+
 commonMenu.worlds=Worlds catalog
 commonMenu.avatars=Avatars
 
@@ -13,5 +16,11 @@ LoginForm.login.placeholder=place for e-mail
 LoginForm.password.label=Password
 LoginForm.password.placeholder=place for password
 LoginForm.submit=Enter
+
+LogoutForm.submit=Logout
+
+settingsMenu.caption=Settings
+settingsMenu.publicity=Publicity
+settingsMenu.socials=Social networks
 
 form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
