--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -6,10 +6,17 @@ LandingPage.logoBrand.title=navigate to landing page
 LandingPage.readyToBegin=Ready to begin?
 
 brandMenu.menu=menu
+brandMenu.help=help
 brandMenu.account=account
 
 commonMenu.worlds=Worlds catalog
 commonMenu.avatars=Avatars
+
+loginViaOther.caption=Login via ...
+
+registrationSection.caption=Need help?
+registrationSection.register=Register account
+registrationSection.resetPassword=Reset password
 
 LoginForm.login.label=Login
 LoginForm.login.placeholder=place for e-mail
@@ -19,8 +26,12 @@ LoginForm.submit=Enter
 
 LogoutForm.submit=Logout
 
-settingsMenu.caption=Settings
-settingsMenu.publicity=Publicity
-settingsMenu.socials=Social networks
+mySettingsMenu.caption=Settings
+mySettingsMenu.publicity=Publicity
+mySettingsMenu.socials=Social networks
+
+myFavouriteMenu.caption=Favourite
+myFavouriteMenu.worlds=My worlds
+myFavouriteMenu.avatars=My avatars
 
 form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
