world list and link to create world

--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -1,6 +1,9 @@
 # \u041E\u0448\u0438\u0431\u043A\u0438
 E.SCE=Impossible to execute command due to critical server failure.
 
+form.create=\u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
+
 LandingPage.title=Welcome to WayPalm!
 LandingPage.logoBrand.title=navigate to landing page
 LandingPage.readyToBegin=Ready to begin?
@@ -34,4 +37,7 @@ myFavouriteMenu.caption=Favourite
 myFavouriteMenu.worlds=My worlds
 myFavouriteMenu.avatars=My avatars
 
-form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
+MyWorldList.emptyNotice=Your world list is empty now. You may <a href="{0}/my/new/world">define your own world</a>, or follow some existing world from the <a href="{0}/worlds">catalog</a>
+MyWorldList.canOwnMore=You may <a href="{0}/my/new/world">define one more world</a>.
+
+CreateNewWorld.form.title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043C\u0438\u0440\u0430
