--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -11,6 +11,7 @@ LandingPage.readyToBegin=Ready to begin?
 brandMenu.menu=menu
 brandMenu.help=help
 brandMenu.account=account
+brandMenu.world=world
 
 commonMenu.worlds=Worlds catalog
 commonMenu.avatars=Avatars
@@ -40,4 +41,11 @@ myFavouriteMenu.avatars=My avatars
 MyWorldList.emptyNotice=Your world list is empty now. You may <a href="{0}/my/new/world">define your own world</a>, or follow some existing world from the <a href="{0}/worlds">catalog</a>
 MyWorldList.canOwnMore=You may <a href="{0}/my/new/world">define one more world</a>.
 
-CreateNewWorld.form.title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043C\u0438\u0440\u0430
+CreateNewWorld.form.title=World name
+CreateNewWorld.form.memo=Brief description of a world (512 letters max)
+CreateNewWorld.form.publisherTitle=Publisher title
+CreateNewWorld.form.publisherUrl=Publisher url (or world home page)
+
+WorldPage.title={0}
+WorldPage.worldTitle.secondary=by {0}
+WorldPage.worldTitle.memoMore=\u2013 find more at
