--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/validation.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/validation.properties
@@ -1,10 +1,12 @@
-message.registerForm.username.Size=\u0410\u0434\u0440\u0435\u0441 \u043F\u043E\u0447\u0442\u044B \u043D\u0435\u043E\u0431\u0445\u043E\u0434\u0438\u043C \u0434\u043B\u044F \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
-message.registerForm.username.UserEmail=\u0410\u0434\u0440\u0435\u0441 \u043F\u043E\u0447\u0442\u044B \u043D\u0435 \u043F\u043E\u0445\u043E\u0436 \u043D\u0430 \u043D\u0430\u0441\u0442\u043E\u044F\u0449\u0438\u0439. \u0418\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435 \u0434\u0440\u0443\u0433\u043E\u0439, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430
-message.registerForm.username.UserEmailRegistered=\u0423 \u043D\u0430\u0441 \u0443\u0436\u0435 \u0435\u0441\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0441 \u044D\u0442\u0438\u043C \u0430\u0434\u0440\u0435\u0441\u043E\u043C
-message.registerForm.password.Size=\u041F\u0430\u0440\u043E\u043B\u044C \u043D\u0443\u0436\u043D\u043E \u0443\u043A\u0430\u0437\u0430\u0442\u044C
+message.registerForm.username.Size=Email is required for registration
+message.registerForm.username.UserEmail=This email likes to be invalid. Try another one, please
+message.registerForm.username.UserEmailRegistered=We already have such a email registered
+message.registerForm.password.Size=Please, specify your password
 
-message.ReCaptcha.registerForm=\u041A\u0430\u043F\u0442\u0447\u0430 \u043D\u0435 \u043F\u0440\u043E\u0439\u0434\u0435\u043D\u0430. \u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043D\u0430\u043F\u0438\u0441\u0430\u0442\u044C \u0432\u0435\u0440\u043D\u044B\u0435 \u0441\u043B\u043E\u0432\u0430 \u0432 \u044D\u0442\u043E\u0442 \u0440\u0430\u0437
+message.ReCaptcha.registerForm=Captcha is not valid. Try again, Mr. Bender
 
-NotNull.worldCreateForm.title=\u041B\u044E\u0431\u043E\u0439 \u043D\u043E\u0432\u044B\u0439 \u043C\u0438\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0438\u043C\u0435\u0442\u044C \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
-NotNull.worldCreateForm.alias=\u0410\u043B\u0438\u0430\u0441 \u043D\u0443\u0436\u0435\u043D \u0447\u0442\u043E\u0431\u044B \u0434\u0435\u043B\u0430\u0442\u044C \u043A\u043E\u0440\u043E\u0442\u043A\u0438\u0435 \u0441\u0441\u044B\u043B\u043A\u0438 \u0434\u043B\u044F \u043C\u0438\u0440\u0430
-WorldTitle.worldCreateForm.title=\u0422\u0430\u043A\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0443\u0436\u0435 \u0435\u0441\u0442\u044C. \u0411\u0443\u0434\u044C\u0442\u0435 \u0431\u043E\u043B\u0435\u0435 \u0443\u043D\u0438\u043A\u0430\u043B\u044C\u043D\u044B
+NotNull.worldCreateForm.title=Any world should have a name
+NotNull.worldCreateForm.alias=We need an alias to make a slug
+WorldTitle.worldCreateForm.title=We already have such name. Be more unique.
+Size.worldCreateForm.memo=We limited brief description to 512 letters. Please, be short.
+URL.worldCreateForm.publisherUrl=We accept only http/https links of valid format
