--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -47,5 +47,13 @@ CreateNewWorld.form.publisherTitle=Publisher title
 CreateNewWorld.form.publisherUrl=Publisher url (or world home page)
 
 WorldPage.title={0}
+WorldPage.sidebar.controlSection.title=Authorities
+WorldPage.sidebar.controlSection.details=Edit common details
+WorldPage.sidebar.controlSection.publishing=Setup publishing
+WorldPage.sidebar.controlSection.surfaces=Mange surfaces
+WorldPage.sidebar.surfaceSection.title=Surfaces
+WorldPage.sidebar.surfaceSection.empty=This world has no surfaces yet
 WorldPage.worldTitle.secondary=by {0}
-WorldPage.worldTitle.memoMore=\u2013 find more at
+WorldPage.visitHomepage=visit homepage
+WorldPage.favourite=add to favourites
+WorldPage.unFavourite=remove from favourites
