new surface page

--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -4,6 +4,9 @@ E.SCE=Impossible to execute command due to critical server failure.
 form.create=\u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
 
+SurfaceKind.GEOID=Geoid
+SurfaceKind.PLANE=Plane
+
 LandingPage.title=Welcome to WayPalm!
 LandingPage.logoBrand.title=navigate to landing page
 LandingPage.readyToBegin=Ready to begin?
@@ -48,7 +51,7 @@ CreateNewWorld.form.publisherUrl=Publisher url (or world home page)
 
 WorldPage.title={0}
 WorldPage.sidebar.controlSection.title=Authorities
-WorldPage.sidebar.controlSection.worldPage=Back to world page
+WorldPage.sidebar.controlSection.worldPage=View world
 WorldPage.sidebar.controlSection.details=Edit common details
 WorldPage.sidebar.controlSection.publishing=Setup publishing
 WorldPage.sidebar.controlSection.surfaces=Manage surfaces
@@ -59,6 +62,10 @@ WorldPage.visitHomepage=visit homepage
 WorldPage.favourite=add to favourites
 WorldPage.unFavourite=remove from favourites
 
+ManageWorldSurfaces.title={0} :: Surfaces
 
-ManageWorldSurfaces.title={0} / surfaces list
-ManageWorldSurfaces.titleBack=back to world page
+CreateWorldSurface.title={0} :: New surface
+
+CreateWorldSurface.form.title=Title of a new surface
+CreateWorldSurface.form.alias=Short alias (used for making slugs)
+CreateWorldSurface.form.kind=Surface kind
