--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -66,6 +66,6 @@ ManageWorldSurfaces.title={0} :: Surfaces
 
 CreateWorldSurface.title={0} :: New surface
 
-CreateWorldSurface.form.title=Title of a new surface
+CreateWorldSurface.form.title=New surface title
 CreateWorldSurface.form.alias=Short alias (used for making slugs)
 CreateWorldSurface.form.kind=Surface kind
