--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -4,8 +4,11 @@ E.SCE=Impossible to execute command due to critical server failure.
 form.create=\u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
 
-SurfaceKind.GEOID=Geoid
-SurfaceKind.PLANE=Plane
+SurfaceGeometry.GEOID=Geoid
+SurfaceGeometry.PLANE=Plane
+
+SurfaceOrientation.LEFT_HAND=X goes right, then Y goes down
+SurfaceOrientation.RIGHT_HAND=X goes right, then Y goes up
 
 LandingPage.title=Welcome to WayPalm!
 LandingPage.logoBrand.title=navigate to landing page
@@ -69,3 +72,4 @@ CreateWorldSurface.title={0} :: New surface
 CreateWorldSurface.form.title=New surface title
 CreateWorldSurface.form.alias=Short alias (used for making slugs)
 CreateWorldSurface.form.kind=Surface kind
+CreateWorldSurface.form.plainOrientation=Space coordinates orientation
