replace macros by #parse

--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -71,5 +71,5 @@ CreateWorldSurface.title={0} :: New surface
 
 CreateWorldSurface.form.title=New surface title
 CreateWorldSurface.form.alias=Short alias (used for making slugs)
-CreateWorldSurface.form.kind=Surface kind
+CreateWorldSurface.form.geometry=Surface kind
 CreateWorldSurface.form.plainOrientation=Space coordinates orientation
