--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -10,3 +10,8 @@ layout.navbar.browse.label=Browse
 layout.navbar.login.label=Login
 
 layout.title.landingPage=Welcome back on WayPalm!
+
+page.Login.form.header=Please sign in
+page.Login.form.email.placeholder=Email
+page.Login.form.password.placeholder=Password
+page.Login.form.submit=Sign in
