--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -11,7 +11,10 @@ layout.navbar.login.label=Login
 
 layout.title.landingPage=Welcome back on WayPalm!
 
-page.Login.form.header=Please sign in
+page.Login.widget.form=Please sign in
 page.Login.form.email.placeholder=Email
 page.Login.form.password.placeholder=Password
 page.Login.form.submit=Sign in
+
+page.Login.widget.register=Not a user yet?
+page.Login.widget.register.text=Take a free membership <a href="{0}">here</a>
