show logout link

--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -7,7 +7,8 @@ form.requiredNotice=<label class="small-text"><span class="required">\u2217</spa
 layout.navbar.brand=WayPalm
 layout.navbar.mission.label=Mission
 layout.navbar.browse.label=Browse
-layout.navbar.login.label=Login
+layout.navbar.login.label=Sign in
+layout.navbar.logout.label=Sign out
 
 layout.title.landingPage=Welcome back on WayPalm!
 
