add register action

--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -16,6 +16,10 @@ page.Login.widget.form=Please sign in
 page.Login.form.email.placeholder=Email
 page.Login.form.password.placeholder=Password
 page.Login.form.submit=Sign in
-
 page.Login.widget.register=Not a user yet?
 page.Login.widget.register.text=Take a free membership <a href="{0}">here</a>
+
+page.Register.widget.form=We just need your email and password
+page.Register.form.email.placeholder=Email
+page.Register.form.password.placeholder=Password
+page.Register.form.submit=Register
