--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -16,10 +16,24 @@ page.Login.widget.form=Please sign in
 page.Login.form.email.placeholder=Email
 page.Login.form.password.placeholder=Password
 page.Login.form.submit=Sign in
+page.Login.form.remember=(use <a href="{0}">total recall</a> feature for help)
 page.Login.widget.register=Not a user yet?
 page.Login.widget.register.text=Take a free membership <a href="{0}">here</a>
+page.Login.fault.header=Got an internal error!
+page.Login.fault.suggestion=Please, come back a little later and try again. Error detail: {0}
+page.Login.faultBadCredentials.header=No user found with this email & password
+page.Login.faultBadCredentials.suggestion=Try another email & password or use <a href="{0}">total recall</a>
+page.Login.faultUsernameNotFound.header=No user with this email
+page.Login.faultUsernameNotFound.suggestion=Try another email or use <a href="{0}">total recall</a>
 
 page.Register.widget.form=We just need your email and password
-page.Register.form.email.placeholder=Email
+page.Register.form.username.placeholder=Email
 page.Register.form.password.placeholder=Password
 page.Register.form.submit=Register
+page.Register.fault.header=Correct form values and try again
+validation.RegisterForm.username.isNull=email is mandatory
+validation.RegisterForm.username.alreadyRegistered=this email is already registered
+validation.RegisterForm.username.notEmail=this should be an email
+validation.RegisterForm.username.wrongSize=email length is invalid
+validation.RegisterForm.password.isNull=password is mandatory
+validation.RegisterForm.password.wrongSize=password length is invalid
