add constructor link

--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -9,6 +9,7 @@ layout.navbar.mission.label=Mission
 layout.navbar.browse.label=Browse
 layout.navbar.login.label=Sign in
 layout.navbar.logout.label=Sign out
+layout.navbar.constructor.label=Constructor
 
 layout.title.landingPage=Welcome back on WayPalm!
 
