--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -9,9 +9,10 @@ layout.navbar.mission.label=Mission
 layout.navbar.browse.label=Browse
 layout.navbar.login.label=Sign in
 layout.navbar.logout.label=Sign out
-layout.navbar.constructor.label=Constructor
+layout.navbar.constructor.label=Create new entity ...
 
 layout.title.landingPage=Welcome back on WayPalm!
+layout.title.constructor=Entity factory
 
 page.Login.widget.form=Please sign in
 page.Login.form.email.placeholder=Email
