--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -39,3 +39,7 @@ validation.RegisterForm.username.notEmail=this should be an email
 validation.RegisterForm.username.wrongSize=email length is invalid
 validation.RegisterForm.password.isNull=password is mandatory
 validation.RegisterForm.password.wrongSize=password length is invalid
+
+constructor.firstWizard.stepLabel=Entity
+constructor.planeWizard.stepTitle=Title
+constructor.planeWizard.stepGeometry=Geometry
