--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -9,7 +9,7 @@ layout.navbar.mission.label=Mission
 layout.navbar.browse.label=Browse
 layout.navbar.login.label=Sign in
 layout.navbar.logout.label=Sign out
-layout.navbar.constructor.label=Create new entity ...
+layout.navbar.constructor.label=Creator mode
 
 layout.title.landingPage=Welcome back on WayPalm!
 layout.title.constructor=Entity factory
@@ -40,6 +40,5 @@ validation.RegisterForm.username.wrongSize=email length is invalid
 validation.RegisterForm.password.isNull=password is mandatory
 validation.RegisterForm.password.wrongSize=password length is invalid
 
-constructor.firstWizard.stepLabel=Entity
-constructor.planeWizard.stepTitle=Title
-constructor.planeWizard.stepGeometry=Geometry
+constructor.defaultSurfaceName=Untitled
+constructor.selectEntityToCreate=What do you want to create?
