let's start from scratch

--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -5,11 +5,13 @@ form.create=\u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 form.requiredNotice=<label class="small-text"><span class="required">\u2217</span> - mandatory field</label>
 
 layout.navbar.brand=WayPalm
-layout.navbar.mission.label=Mission
-layout.navbar.browse.label=Browse
-layout.navbar.login.label=Sign in
-layout.navbar.logout.label=Sign out
-layout.navbar.constructor.label=Creator mode
+layout.navbar.mission=Mission
+layout.navbar.browse=Browse
+layout.navbar.login=Sign in
+layout.navbar.logout=Sign out
+layout.navbar.tools=Tools
+layout.navbar.tools.leave=Exit Tools
+layout.navbar.tools.surfaces=Surfaces
 
 layout.title.landingPage=Welcome back on WayPalm!
 layout.title.constructor=Entity factory
@@ -41,4 +43,3 @@ validation.RegisterForm.password.isNull=password is mandatory
 validation.RegisterForm.password.wrongSize=password length is invalid
 
 constructor.defaultSurfaceName=Untitled
-constructor.selectEntityToCreate=What do you want to create?
