--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -11,7 +11,7 @@ layout.navbar.login=Sign in
 layout.navbar.logout=Sign out
 layout.navbar.tools=Tools
 layout.navbar.tools.leave=Leave Tools
-layout.navbar.tools.surfaces=Surfaces
+layout.navbar.tools.areas=Areas
 
 layout.title.landingPage=Welcome back on WayPalm!
 layout.title.constructor=Entity factory
@@ -42,4 +42,10 @@ validation.RegisterForm.username.wrongSize=email length is invalid
 validation.RegisterForm.password.isNull=password is mandatory
 validation.RegisterForm.password.wrongSize=password length is invalid
 
-constructor.defaultSurfaceName=Untitled
+constructor.defaultAreaName=Untitled
+page.constructor.newArea.form.title.label=Enter area title
+page.constructor.newArea.form.title.placeholder=Choose name you like or would like to see
+page.constructor.newArea.form.kind.label=Select origin
+page.constructor.newArea.form.kind.placeholder=What should it be - plain map or house levels?
+page.constructor.newArea.form.kind.plain=Plain surface
+page.constructor.newArea.form.kind.building=Building plan
