--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -49,3 +49,4 @@ page.constructor.newArea.form.kind.label=Select origin
 page.constructor.newArea.form.kind.placeholder=What should it be - plain map or house levels?
 page.constructor.newArea.form.kind.plane=Plane surface
 page.constructor.newArea.form.kind.building=Building plan
+page.constructor.newArea.form.submit=Create
