--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -48,5 +48,11 @@ page.constructor.newArea.form.title.placeholder=Choose name you like or would li
 page.constructor.newArea.form.kind.label=Select origin
 page.constructor.newArea.form.kind.placeholder=What should it be - plain map or house levels?
 page.constructor.newArea.form.kind.plane=Plane surface
-page.constructor.newArea.form.kind.building=Building plan
 page.constructor.newArea.form.submit=Create
+page.constructor.newArea.form.geometry.label=Define geometry
+page.constructor.newArea.form.geometry_plane.axisX=X Orientation
+page.constructor.newArea.form.geometry_plane.axisX.left=Left
+page.constructor.newArea.form.geometry_plane.axisX.right=Right
+page.constructor.newArea.form.geometry_plane.axisY=Y Orientation
+page.constructor.newArea.form.geometry_plane.axisY.up=Up
+page.constructor.newArea.form.geometry_plane.axisY.down=Down
