--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -43,16 +43,16 @@ validation.RegisterForm.password.isNull=password is mandatory
 validation.RegisterForm.password.wrongSize=password length is invalid
 
 constructor.defaultAreaName=Untitled
+page.constructor.newArea.form.submit=Create
 page.constructor.newArea.form.title.label=Enter area title
 page.constructor.newArea.form.title.placeholder=Choose name you like or would like to see
-page.constructor.newArea.form.kind.label=Select origin
-page.constructor.newArea.form.kind.placeholder=What should it be - plain map or house levels?
+page.constructor.newArea.form.kind.label=Select geometry
 page.constructor.newArea.form.kind.plane=Plane surface
-page.constructor.newArea.form.submit=Create
-page.constructor.newArea.form.geometry.label=Define geometry
 page.constructor.newArea.form.geometry_plane.axisX=X Orientation
 page.constructor.newArea.form.geometry_plane.axisX.left=Left
 page.constructor.newArea.form.geometry_plane.axisX.right=Right
 page.constructor.newArea.form.geometry_plane.axisY=Y Orientation
 page.constructor.newArea.form.geometry_plane.axisY.up=Up
 page.constructor.newArea.form.geometry_plane.axisY.down=Down
+
+NotBlank.createAreaForm.title=\u041F\u0440\u0438\u0434\u0443\u043C\u0430\u0439\u0442\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
