--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -48,6 +48,7 @@ page.constructor.newArea.form.title.label=Enter area title
 page.constructor.newArea.form.title.placeholder=Choose name you like or would like to see
 page.constructor.newArea.form.kind.label=Select geometry
 page.constructor.newArea.form.kind.plane=Plane surface
+page.constructor.newArea.form.geometry_preview=Geometry preview
 page.constructor.newArea.form.geometry_plane.axisX=X Orientation
 page.constructor.newArea.form.geometry_plane.axisX.left=Left
 page.constructor.newArea.form.geometry_plane.axisX.right=Right
