--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -9,9 +9,7 @@ layout.navbar.mission=Mission
 layout.navbar.browse=Browse
 layout.navbar.login=Sign in
 layout.navbar.logout=Sign out
-layout.navbar.tools=Tools
-layout.navbar.tools.leave=Leave Tools
-layout.navbar.tools.areas=Areas
+layout.navbar.own=Own
 
 layout.title.landingPage=Welcome back on WayPalm!
 layout.title.constructor=Entity factory
